--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^12.34.3",
     "gsap": "^3.14.2",
+    "lucide-react": "^0.575.0",
     "nodemon": "^3.1.11",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
